test/files/neg/macro-exception/Macros_1.scala
import scala.language.experimental.macros
import scala.reflect.macros.blackbox.Context

object Macros {
  def impl(c: Context) = {
    throw new Exception()
  }
  def exception = macro impl
}